--- a/src/templates/actor-sheet.html
+++ b/src/templates/actor-sheet.html
@@ -1,6 +1,6 @@
 <form class="{{cssClass}} flexrow" autocomplete="off">
 	{{!-- Sheet Header --}}
-	<header class="header-filds">
+	<header class="header-fields">
 		<div class="content">
 			<div class="header-top">
 
@@ -24,11 +24,11 @@
 				</div>
 
 				{{!-- Experience --}}
-				<div class="experience flexrow">		
+				<div class="experience flexrow">
 					<h4 class="text">{{localize "anima.experience"}}:</h4>
-					<input type="number" class="xp-number" value="{{data.description.experience.value}}" name="data.description.experience.value" data-dtype="Number">		
+					<input type="number" class="xp-number" value="{{data.description.experience.value}}" name="data.description.experience.value" data-dtype="Number">
 				</div>
-			</div> 
+			</div>
 
 
 			<img src="{{actor.img}}" class="img-profile" data-edit="img" title="{{actor.name}}" height="145" width="145">
