--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -2,10 +2,10 @@
 // ------COLORS-------
 // -------------------
 
-$red-color: #6e2917;
+$red: #6e2917;
 $dark-cream: #dcd7b7;
 $light-cream: #e7e5da;
-$Gold: #9f9c87; 
+$gold: #9f9c87;
 $intensified-red: #ff0000;
 $black: #000000;
 $white: #ffffff;
@@ -56,7 +56,7 @@ $border-radius: 10px;
 // ---------------------------
 
 .window-app .window-content{
-    background: $light-cream; 
+    background: $light-cream;
 }
 .abf.sheet.actor {
 // ------------------------
