Initial work on combat sheet html

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -1,4 +1,5 @@
 @import "actor-sheet.scss";
-@import "secondaries.scss";
+@import "combat.scss";
 @import "main.scss";
-@import "variable.scss"
+@import "secondaries.scss";
+@import "variable.scss";
