Change elan template with psychic template
- Also using hbs extensions for better editor support with handlebars
templates
- Also fix variable naming in _common scss file

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -5,7 +5,7 @@
   padding: 3px;
   color: $white;
   border-radius: $border-radius;
-  background: $red-color;
+  background: $red;
   font-weight: 600;
 }
 
