Rename input_value selector to input-value

--- a/src/scss/mentalism.scss
+++ b/src/scss/mentalism.scss
@@ -18,7 +18,7 @@
     align-items: center;
   }
 
-  .input_value {
+  .input-value {
     width: clamp(38px, 25%, 42px) !important;
     height: clamp(15px, 80%, 30px) !important;
     border-radius: $border-radius;
