--- a/src/scss/secondaries.scss
+++ b/src/scss/secondaries.scss
@@ -24,7 +24,7 @@
            width: 140px;
            display: flex;
            justify-content: space-evenly;
-            .input_value {
+            .input-value {
                 width: 45px !important;
                 height: 15px !important;
                 margin-bottom: 3px;
@@ -90,7 +90,7 @@
         }
        }
        div{
-           .input_value{
+           .input-value{
                width: 35px !important;
            }
            .skill-controls{
