--- a/src/templates/parts/psychic.hbs
+++ b/src/templates/parts/psychic.hbs
@@ -15,7 +15,7 @@
                         </label>
                         <input
                                 type="number"
-                                class="input_value"
+                                class="input-value"
                                 id="data.psychic.psychicPotential"
                                 name="data.psychic.psychicPotential.value"
                                 value="{{data.psychic.psychicPotential.value}}"
@@ -35,7 +35,7 @@
                         </label>
                         <input
                                 type="number"
-                                class="input_value"
+                                class="input-value"
                                 id="data.psychic.psychicProjection.offensive"
                                 name="data.psychic.psychicProjection.offensive.value"
                                 value="{{data.psychic.psychicProjection.offensive.value}}"
@@ -51,14 +51,14 @@
                         </label>
                         <input
                                 type="number"
-                                class="input_value"
+                                class="input-value"
                                 id="data.psychic.freePp.value"
                                 name="data.psychic.freePp.value"
                                 value="{{data.psychic.freePp.value}}"
                                 data-dtype="Number">
                         <input
                                 type="number"
-                                class="input_value"
+                                class="input-value"
                                 id="data.psychic.freePp.max"
                                 name="data.psychic.freePp.max"
                                 value="{{data.psychic.freePp.max}}"
