--- a/src/templates/parts/secondaries.html
+++ b/src/templates/parts/secondaries.html
@@ -9,7 +9,7 @@
                 data-roll="1d100xa+@secondaries.athletics.{{key}}.value" data-label="{{key}}">
                 {{localize (concat "anima." key)}}
             </label>
-            <input type="text" name="data.secondaries.athletics.{{key}}.value" class="input_value" value="{{atr.value}}" data-dtype="Number" />
+            <input type="text" name="data.secondaries.athletics.{{key}}.value" class="input-value" value="{{atr.value}}" data-dtype="Number" />
         </div>
         {{/each}}
     </div>
@@ -24,7 +24,7 @@
                 data-roll="1d100xa+@secondaries.social.{{key}}.value" data-label="{{key}}">
                 {{localize (concat "anima." key)}}
             </label>
-            <input type="text" name="data.secondaries.social.{{key}}.value" class="input_value" value="{{atr.value}}" data-dtype="Number" />
+            <input type="text" name="data.secondaries.social.{{key}}.value" class="input-value" value="{{atr.value}}" data-dtype="Number" />
         </div>
         {{/each}}
     </div>
@@ -39,7 +39,7 @@
                 data-roll="1d100xa+@secondaries.perception.{{key}}.value" data-label="{{key}}">
                 {{localize (concat "anima." key)}}
             </label>
-            <input type="text" name="data.secondaries.perception.{{key}}.value" class="input_value" value="{{atr.value}}" data-dtype="Number" />
+            <input type="text" name="data.secondaries.perception.{{key}}.value" class="input-value" value="{{atr.value}}" data-dtype="Number" />
         </div>
         {{/each}}
     </div>
@@ -54,7 +54,7 @@
                 data-roll="1d100xa+@secondaries.vigor.{{key}}.value" data-label="{{key}}">
                 {{localize (concat "anima." key)}}
             </label>
-            <input type="text" name="data.secondaries.vigor.{{key}}.value" class="input_value" value="{{atr.value}}" data-dtype="Number" />
+            <input type="text" name="data.secondaries.vigor.{{key}}.value" class="input-value" value="{{atr.value}}" data-dtype="Number" />
         </div>
         {{/each}}
     </div>
@@ -69,7 +69,7 @@
                 data-roll="1d100xa+@secondaries.intellectual.{{key}}.value" data-label="{{key}}">
                 {{localize (concat "anima." key)}}
             </label>
-            <input type="text" name="data.secondaries.intellectual.{{key}}.value" class="input_value" value="{{atr.value}}" data-dtype="Number" />
+            <input type="text" name="data.secondaries.intellectual.{{key}}.value" class="input-value" value="{{atr.value}}" data-dtype="Number" />
         </div>
         {{/each}}
     </div>
@@ -84,7 +84,7 @@
                 data-roll="1d100xa+@secondaries.subterfuge.{{key}}.value" data-label="{{key}}">
                 {{localize (concat "anima." key)}}
             </label>
-            <input type="text" name="data.secondaries.subterfuge.{{key}}.value" class="input_value" value="{{atr.value}}" data-dtype="Number" />
+            <input type="text" name="data.secondaries.subterfuge.{{key}}.value" class="input-value" value="{{atr.value}}" data-dtype="Number" />
         </div>
         {{/each}}
     </div>
@@ -99,7 +99,7 @@
                 data-roll="1d100xa+@secondaries.creative.{{key}}.value" data-label="{{key}}">
                 {{localize (concat "anima." key)}}
             </label>
-            <input type="text" name="data.secondaries.creative.{{key}}.value" class="input_value" value="{{atr.value}}" data-dtype="Number" />
+            <input type="text" name="data.secondaries.creative.{{key}}.value" class="input-value" value="{{atr.value}}" data-dtype="Number" />
         </div>
         {{/each}}
     </div>
@@ -117,7 +117,7 @@
                 data-roll="1d100xa+@skill.data.value">
                 {{skill.name}}
             </label>
-            <input type="number" data-field="skill.data.value" class="input_value" value="{{skill.data.value}}" data-dtype="Number" />
+            <input type="number" data-field="skill.data.value" class="input-value" value="{{skill.data.value}}" data-dtype="Number" />
             <a class="skill-controls"><i class="fas fa-trash skilldelete"></i></a>
         </div>
         {{/each}}
