changes: fix some typo elements and pr review changes

--- a/src/templates/dialog/mod-dialog.html
+++ b/src/templates/dialog/mod-dialog.html
@@ -1,6 +1,6 @@
 <form>
   <div class="form-group">
-    <label>Modificador</label>
+    <label>{{localize "dialogs.mod.content"}}</label>
     <input id="mod" type="text" name="mod" placeholder="0" />
   </div>
 </form>
