wip: add html skeleton for main tab

--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -5,11 +5,11 @@
 $red: #6e2917;
 $dark-cream: #dcd7b7;
 $light-cream: #e7e5da;
-$gold: #9f9c87;
 $intensified-red: #ff0000;
 $black: #000000;
 $white: #ffffff;
 $grey:  #808080;
+$light-gray: #9f9c87;
 $border-radius: 10px;
 
 // -----------------------
