--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -1,4 +1,8 @@
-@import "actor-sheet.scss";
-@import "secondaries.scss";
-@import "variable.scss";
-@import "mentalism.scss";
+@import 'spacing-helpers.scss';
+@import 'display-helpers.scss';
+@import 'variable.scss';
+
+@import 'actor-sheet.scss';
+@import 'main.scss';
+@import 'secondaries.scss';
+@import 'mentalism.scss';
