--- a/src/templates/actor-sheet.html
+++ b/src/templates/actor-sheet.html
@@ -143,7 +143,7 @@
 
 				{{!-- Main Tab --}}
 				<div class="tab main" data-group="primary" data-tab="main">
-					{{> "systems/animabf/templates/parts/main.html"}}
+					{{> "systems/animabf/templates/parts/main/main.hbs"}}
 				</div>
 
 				{{!-- Secondaries Tab --}}
