--- a/src/templates/parts/main/parts/advantages.hbs
+++ b/src/templates/parts/main/parts/advantages.hbs
@@ -1,7 +1,7 @@
 <div class='group advantages mt-3'>
   <div class='group-header'>
     <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
-    <p class='group-header-title'>Ventajas</p>
+    <h3 class='group-header-title'>Ventajas</h3>
   </div>
   <div class='group-body'>
     <div class='advantages-row'>
