--- a/src/templates/parts/main/parts/aspect.hbs
+++ b/src/templates/parts/main/parts/aspect.hbs
@@ -1,6 +1,6 @@
 <div class='group aspect'>
   <div class='group-header'>
-    <p class='group-header-title'>Aspecto</p>
+    <h3 class='group-header-title'>Aspecto</h3>
   </div>
   <div class='group-body'>
     <div class='hair flex mr-1'>
