--- a/src/templates/parts/main/parts/description.hbs
+++ b/src/templates/parts/main/parts/description.hbs
@@ -1,6 +1,6 @@
 <div class='group description mt-3'>
   <div class='group-header'>
-    <p class='group-header-title'>Descripción</p>
+    <h3 class='group-header-title'>Descripción</h3>
   </div>
   <div class='group-body'>
     <textarea class='input'></textarea>
