--- a/src/templates/parts/main/parts/elan.hbs
+++ b/src/templates/parts/main/parts/elan.hbs
@@ -1,7 +1,7 @@
 <div class='group elan mt-3'>
   <div class='group-header'>
     <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
-    <p class='group-header-title'>Elan</p>
+    <h3 class='group-header-title'>Elan</h3>
   </div>
   <div class='group-body'>
     <div class='elan-row'>
