--- a/src/templates/parts/main/parts/notes.hbs
+++ b/src/templates/parts/main/parts/notes.hbs
@@ -1,7 +1,7 @@
 <div class='group notes mt-3'>
   <div class='group-header'>
     <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
-    <p class='group-header-title'>Notas</p>
+    <h3 class='group-header-title'>Notas</h3>
   </div>
   <div class='group-body'>
     <div class='notes-row'>
