--- a/src/templates/parts/main/parts/titles.hbs
+++ b/src/templates/parts/main/parts/titles.hbs
@@ -1,7 +1,7 @@
 <div class='group titles mt-3'>
   <div class='group-header'>
     <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
-    <p class='group-header-title'>Títulos</p>
+    <h3 class='group-header-title'>Títulos</h3>
   </div>
   <div class='group-body'>
     <div class='titles-row'>
