--- a/src/templates/parts/main/parts/contacts.hbs
+++ b/src/templates/parts/main/parts/contacts.hbs
@@ -1,7 +1,7 @@
 <div class='group contacts mt-3'>
   <div class='group-header'>
     <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
-    <p class='group-header-title'>Contactos</p>
+    <h3 class='group-header-title'>Contactos</h3>
   </div>
   <div class='group-body'>
     <div class='contacts-row flex'>
@@ -14,5 +14,6 @@
         <textarea class='input' rows='2'></textarea>
       </div>
     </div>
+
   </div>
 </div>
