--- a/src/templates/parts/main/parts/disadvantages.hbs
+++ b/src/templates/parts/main/parts/disadvantages.hbs
@@ -1,7 +1,7 @@
 <div class='group disadvantages mt-3'>
   <div class='group-header'>
     <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
-    <p class='group-header-title'>Desventajas</p>
+    <h3 class='group-header-title'>Desventajas</h3>
   </div>
   <div class='group-body'>
     <div class='disadvantages-row'>
