--- a/src/templates/parts/main/parts/experience.hbs
+++ b/src/templates/parts/main/parts/experience.hbs
@@ -1,6 +1,6 @@
 <div class='group experience'>
   <div class='group-header'>
-    <p class='group-header-title'>Experiencia</p>
+    <h3 class='group-header-title'>Experiencia</h3>
   </div>
   <div class='group-body'>
     <div class='experience-bar'>
