--- a/src/templates/parts/main/parts/level.hbs
+++ b/src/templates/parts/main/parts/level.hbs
@@ -1,7 +1,7 @@
 <div class='group level'>
   <div class='group-header'>
     <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
-    <p class='group-header-title'>Nivel</p>
+    <h3 class='group-header-title'>Nivel</h3>
     <input type='number' class='input' />
   </div>
   <div class='group-body'>
