--- a/src/templates/parts/main/parts/aspect.hbs
+++ b/src/templates/parts/main/parts/aspect.hbs
@@ -5,39 +5,84 @@
   <div class='group-body'>
     <div class='hair flex mr-1'>
       <p class='label'>Pelo</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.aspect.hair.value'
+        type='text'
+        class='input'
+        value='{{data.general.aspect.hair.value}}'
+      />
     </div>
     <div class='eyes flex'>
       <p class='label'>Ojos</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.aspect.eyes.value'
+        type='text'
+        class='input'
+        value='{{data.general.aspect.eyes.value}}'
+      />
     </div>
     <div class='height flex mr-1'>
       <p class='label'>Altura</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.aspect.height.value'
+        type='text'
+        class='input'
+        value='{{data.general.aspect.height.value}}'
+      />
     </div>
     <div class='weight flex'>
       <p class='label'>Peso</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.aspect.weight.value'
+        type='text'
+        class='input'
+        value='{{data.general.aspect.weight.value}}'
+      />
     </div>
     <div class='age flex mr-1'>
       <p class='label'>Edad</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.aspect.age.value'
+        type='text'
+        class='input'
+        value='{{data.general.aspect.age.value}}'
+      />
     </div>
     <div class='genre flex'>
       <p class='label'>Sexo</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.aspect.genre.value'
+        type='text'
+        class='input'
+        value='{{data.general.aspect.genre.value}}'
+      />
     </div>
     <div class='race flex mr-1'>
       <p class='label'>Raza</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.aspect.race.value'
+        type='text'
+        class='input'
+        value='{{data.general.aspect.race.value}}'
+      />
     </div>
     <div class='appearance flex'>
       <p class='label'>Apariencia</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.aspect.appearance.value'
+        type='text'
+        class='input'
+        value='{{data.general.aspect.appearance.value}}'
+      />
     </div>
     <div class='size flex'>
       <p class='label'>Tamaño</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.aspect.size.value'
+        type='text'
+        class='input'
+        value='{{data.general.aspect.size.value}}'
+      />
     </div>
   </div>
 </div>
