--- a/src/templates/parts/main/parts/description.hbs
+++ b/src/templates/parts/main/parts/description.hbs
@@ -3,6 +3,9 @@
     <h3 class='group-header-title'>Descripción</h3>
   </div>
   <div class='group-body'>
-    <textarea class='input'></textarea>
+    <textarea
+      name='data.general.description.value'
+      class='input'
+    >{{data.general.description.value}}</textarea>
   </div>
 </div>
