--- a/src/templates/parts/main/parts/experience.hbs
+++ b/src/templates/parts/main/parts/experience.hbs
@@ -4,12 +4,25 @@
   </div>
   <div class='group-body'>
     <div class='experience-bar'>
-      <div class='current-experience' style='width: 20%;'></div>
+      <div
+        class='current-experience'
+        style='width: {{calculateExperience data.general.experience.current data.general.experience.next }}%;'
+      ></div>
     </div>
     <div class='experience-values flex mt-1'>
-      <input type='text' class='input current-experience' />
+      <input
+        name='data.general.experience.current'
+        type='number'
+        class='input current-experience {{#is "gte" data.general.experience.current data.general.experience.next }}red{{/is}}'
+        value='{{data.general.experience.current}}'
+      />
       /
-      <input type='text' class='input' />
+      <input
+        name='data.general.experience.next'
+        type='number'
+        class='input next-experience'
+        value='{{data.general.experience.next}}'
+      />
     </div>
   </div>
 </div>
