--- a/src/templates/parts/main/parts/language.hbs
+++ b/src/templates/parts/main/parts/language.hbs
@@ -1,22 +1,32 @@
 <div class='group language mt-3'>
   <div class='group-header'>
-    <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
+    <img
+      class='add-button'
+      data-on-click='add-language'
+      src='/systems/animabf/assets/images/boton-plus.png'
+    />
     <h3 class='group-header-title'>Idiomas</h3>
     <input type='number' class='input' />
   </div>
   <div class='group-body'>
     <div class='base-language flex'>
       <p class='label ml-2 mr-2'>Base</p>
-      <input type='text' class='input' />
+      <input
+        name='data.general.languages.base.value'
+        type='text'
+        class='input'
+        value='{{data.general.languages.base.value}}'
+      />
     </div>
-    <div class='language-row'>
-      <input type='text' class='input' />
-    </div>
-    <div class='language-row'>
-      <input type='text' class='input' />
-    </div>
-    <div class='language-row'>
-      <input type='text' class='input' />
-    </div>
+    {{#each data.general.languages.others}}
+      <div class='language-row'>
+        <input
+          name='data.dynamic.other_languages.{{this._id}}.name'
+          type='text'
+          class='input'
+          value='{{this.name}}'
+        />
+      </div>
+    {{/each}}
   </div>
 </div>
