changes: improve elan dynamic element cards

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -142,6 +142,10 @@
       }
 
       .elan-row {
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+
         margin-top: 0.75rem;
 
         .base {
@@ -222,7 +226,7 @@
         }
 
         &.red {
-         color: $red;
+          color: $red;
         }
       }
     }
