changes: add titles, advantages, disadvantages, contacts and notes to the dynamic item management system

--- a/src/scss/actor-sheet.scss
+++ b/src/scss/actor-sheet.scss
@@ -287,6 +287,7 @@
             position: relative;
 
             .max-fatigue{
+              width: 2rem;
               position: absolute;
               background: $red;
               color: $white;
