--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -3,6 +3,6 @@
 @import 'variable.scss';
 
 @import 'actor-sheet.scss';
-@import 'main.scss';
+@import 'general.scss';
 @import 'secondaries.scss';
 @import 'mentalism.scss';
