--- a/src/templates/parts/main/parts/advantages.hbs
+++ b/src/templates/parts/main/parts/advantages.hbs
@@ -1,12 +1,21 @@
 <div class='group advantages mt-3'>
   <div class='group-header'>
-    <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
+    <img
+      class='add-button'
+      data-on-click='add-advantage'
+      src='/systems/animabf/assets/images/boton-plus.png'
+    />
     <h3 class='group-header-title'>Ventajas</h3>
   </div>
-  <div class='group-body'>
+  <div id='advantage-context-menu-container' class='group-body'>
     {{#each data.general.advantages}}
-      <div class='advantages-row'>
-        <input name='{{this}}' type='text' class='input' value='{{this}}' />
+      <div data-advantage-id='{{this._id}}' class='advantage-row'>
+        <input
+          name='data.dynamic.advantages.{{this._id}}.name'
+          type='text'
+          class='input'
+          value='{{this.name}}'
+        />
       </div>
     {{/each}}
   </div>
