--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -43,6 +43,9 @@
 
       .add-button {
         justify-self: start;
+        padding: 0.125rem;
+        border: none;
+        cursor: pointer;
       }
 
       .input {
@@ -171,11 +174,11 @@
     }
 
     .group-body {
-      .titles-row:first-child {
+      .title-row:first-child {
         margin-top: 0;
       }
 
-      .titles-row {
+      .title-row {
         margin-top: 0.75rem;
       }
     }
@@ -240,11 +243,11 @@
     }
 
     .group-body {
-      .advantages-row:first-child {
+      .advantage-row:first-child {
         margin-top: 0;
       }
 
-      .advantages-row {
+      .advantage-row {
         margin-top: 0.75rem;
       }
     }
@@ -258,11 +261,11 @@
     }
 
     .group-body {
-      .disadvantages-row:first-child {
+      .disadvantage-row:first-child {
         margin-top: 0;
       }
 
-      .disadvantages-row {
+      .disadvantage-row {
         margin-top: 0.75rem;
       }
     }
@@ -322,15 +325,19 @@
     }
 
     .group-body {
-      .contacts-row:first-child {
+      .contact-row:first-child {
         margin-top: 0;
       }
 
-      .contacts-row {
+      .contact-row {
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+
         margin-top: 0.75rem;
 
         .label {
-          color: $light-gray;
+          color: $black;
           text-align: center;
 
           margin-top: 0;
@@ -374,11 +381,11 @@
     }
 
     .group-body {
-      .notes-row:first-child {
+      .note-row:first-child {
         margin-top: 0;
       }
 
-      .notes-row {
+      .note-row {
         margin-top: 0.75rem;
       }
     }
