--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -8,7 +8,7 @@ $light-cream: #e7e5da;
 $intensified-red: #ff0000;
 $black: #000000;
 $white: #ffffff;
-$grey:  #808080;
+$grey: #808080;
 $light-gray: #9f9c87;
 $border-radius: 10px;
 
@@ -16,73 +16,82 @@ $border-radius: 10px;
 // ------CLASS GRID-------
 // -----------------------
 .grid-1col {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: 1fr;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 1fr;
 }
 .grid-2col {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 1fr;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
 }
 
 .grid-3col {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 1fr;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 1fr;
 }
 
 .grid-4col {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 1fr;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
 }
 
 // ----------------------------
 // -------ROLLABLE CLASS-------
 // ----------------------------
 
-.rollable{
-    cursor: pointer;
-    &:hover,
-    &:focus{
-        text-shadow: 0 0 8px red;
-    }
+.rollable {
+  cursor: pointer;
+  &:hover,
+  &:focus {
+    text-shadow: 0 0 8px red;
+  }
 }
-
 
 // ---------------------------
 // ------BACKGORUDCOLOR-------
 // ---------------------------
 
-.window-app .window-content{
-    background: $light-cream;
+.window-app .window-content {
+  background: $light-cream;
 }
 .abf.sheet.actor {
-// ------------------------
-// ------ALL INPUTS-------
-// ------------------------
+  // ------------------------
+  // ------ALL INPUTS-------
+  // ------------------------
 
-    input{
-        width: 30px;
-        height: 30px;
-        border: none;
-        ::-webkit-input-placeholder{
-        text-align: center;
-        }
+  // TODO: Remove this generic selector and set the class selector over all inputs
+  input,
+  .input {
+    font-family: inherit;
+    border: none;
+    ::-webkit-input-placeholder {
+      text-align: center;
     }
+  }
 
-// ------------------------
-// ------ALL TEXTS--------
-// ------------------------
+  // ------------------------
+  // ------ALL TEXTS--------
+  // ------------------------
 
-    .text, .text-off, .text-armor, .label-text,
-    .level-number, .xp-number, .max-life, .current-life,
-    .turn, .max-fatigue, .current-fatigue, .class-text{
+  .text,
+  .text-off,
+  .text-armor,
+  .label-text,
+  .level-number,
+  .xp-number,
+  .max-life,
+  .current-life,
+  .turn,
+  .max-fatigue,
+  .current-fatigue,
+  .class-text {
     font-weight: 600;
-    }
+  }
 
-    .text-off{
+  .text-off {
     color: $grey;
-    }
+  }
 }
