--- a/src/templates/parts/main/parts/contacts.hbs
+++ b/src/templates/parts/main/parts/contacts.hbs
@@ -1,19 +1,32 @@
 <div class='group contacts mt-3'>
   <div class='group-header'>
-    <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
+    <img
+      class='add-button'
+      data-on-click='add-contact'
+      src='/systems/animabf/assets/images/boton-plus.png'
+    />
     <h3 class='group-header-title'>Contactos</h3>
   </div>
-  <div class='group-body'>
-    <div class='contacts-row flex'>
-      <div class='contact-name flex flex-1 mr-3'>
-        <p class='label'>Nombre</p>
-        <textarea class='input' rows='2'></textarea>
+  <div id='contact-context-menu-container' class='group-body'>
+    {{#each data.general.contacts}}
+      <div data-contact-id='{{this._id}}' class='contact-row flex'>
+        <div class='contact-name flex flex-1 mr-3'>
+          <p class='label'>Nombre</p>
+          <textarea
+            name='data.dynamic.contacts.{{this._id}}.name'
+            class='input'
+            rows='2'
+          >{{this.name}}</textarea>
+        </div>
+        <div class='contact-description flex flex-4'>
+          <p class='label'>Descripción</p>
+          <textarea
+            name='data.dynamic.contacts.{{this._id}}.description'
+            class='input'
+            rows='2'
+          >{{this.data.description}}</textarea>
+        </div>
       </div>
-      <div class='contact-description flex flex-4'>
-        <p class='label'>Descripción</p>
-        <textarea class='input' rows='2'></textarea>
-      </div>
-    </div>
-
+    {{/each}}
   </div>
 </div>
