--- a/src/templates/parts/main/parts/level.hbs
+++ b/src/templates/parts/main/parts/level.hbs
@@ -8,9 +8,9 @@
     <h3 class='group-header-title'>Nivel</h3>
     <input type='number' class='input' />
   </div>
-  <div class='group-body'>
+  <div id='level-context-menu-container' class='group-body'>
     {{#each data.general.levels}}
-      <div class='level-row flex'>
+      <div data-level-id='{{this._id}}' class='level-row flex'>
         <input
           name='data.dynamic.levels.{{this._id}}.name'
           type='text'
