--- a/src/templates/parts/main/parts/notes.hbs
+++ b/src/templates/parts/main/parts/notes.hbs
@@ -1,11 +1,22 @@
 <div class='group notes mt-3'>
   <div class='group-header'>
-    <img class='add-button' src='/systems/animabf/assets/images/boton-plus.png' />
+    <img
+      class='add-button'
+      data-on-click='add-note'
+      src='/systems/animabf/assets/images/boton-plus.png'
+    />
     <h3 class='group-header-title'>Notas</h3>
   </div>
-  <div class='group-body'>
-    <div class='notes-row'>
-      <input type='text' class='input' />
-    </div>
+  <div id='note-context-menu-container' class='group-body'>
+    {{#each data.general.notes}}
+      <div data-note-id='{{this._id}}' class='note-row'>
+        <input
+          name='data.dynamic.notes.{{this._id}}.name'
+          type='text'
+          class='input'
+          value='{{this.name}}'
+        />
+      </div>
+    {{/each}}
   </div>
 </div>
